# revapp

./: Dockerfile  README.md
.github/workflows/: pipe.yml
docs/: CI-CD.md  RUNNING_IN_PROD.md  SRE.md
gitops/revapp/: Chart.yaml  values.yaml
gitops/revapp/templates/: _helpers.tpl  application.yaml
revcluster/mongodb/: deployment.yaml  secret.yaml
revcluster/nginx-ingress/: install_nginx_ingress.sh
revcluster/prometheus-stack/: install_prometheus.sh
revcluster/sloth/: sloth.yaml
src/: Dockerfile  pyproject.toml  requirements.txt  server.py
src/config/: db.py
src/models/: date_model.py
src/routes/: user_routes.py
src/schemas/: user_schema.py
